# borsh-test

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/snapshots/: borsh_test__tests__struct_enum-3.snap  borsh_test__tests__struct_enum-4.snap  borsh_test__tests__tuple_enum-3.snap  borsh_test__tests__tuple_enum-5.snap  borsh_test__tests__tuple_enum-6.snap  borsh_test__tests__tuple_enum-8.snap  borsh_test__tests__tuple_enum.snap  borsh_test__tests__unit_enum-2.snap  borsh_test__tests__unit_enum-4.snap  borsh_test__tests__unit_enum-5.snap  borsh_test__tests__unit_enum-6.snap
